@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     
+   119: AstroFloyd, 30/07/2010
+     - Add variable 141 to plotplt: GMMenv/R
+     
    109: AstroFloyd, 21/07/2010
      - Update documentation/comments
      
